Fix css bug (caused flickering on webkit)

--- a/src/styles/base.styl
+++ b/src/styles/base.styl
@@ -57,7 +57,7 @@ img, video
   flex-direction column
   align-items center
   justify-content center
-  transition opacity 200ms ease-in-out 150ms
+  transition all 300ms ease
 
 .bespoke-active
   pointer-events auto
